Tweaking lazy loading

--- a/slideshow.html
+++ b/slideshow.html
@@ -67,9 +67,9 @@
     <div class="slideshow-container">
         <div class="vertical-center slideshow">
             <img src="/img/DSC_8075-3.jpg">
-            <img src="/img/DSC_8076-2.jpg">
-            <img src="/img/DSC_8083.jpg">
-            <img src="/img/DSC_8089.jpg">
+            <img data-src="/img/DSC_8076-2.jpg">
+            <img data-src="/img/DSC_8083.jpg">
+            <img data-src="/img/DSC_8089.jpg">
             <img data-src="/img/DSC_8094.jpg">
             <img data-src="/img/DSC_8113.jpg">
             <img data-src="/img/DSC_8128-2.jpg">
