Adding a few links

--- a/index.html
+++ b/index.html
@@ -202,8 +202,7 @@
         <div id="shadow">
             <div id="content">
                 <form id="form" action="#">
-                    <h2>RSVP with us!</h2>
-                    <p class="text-center">Join us June 6, 2015 in Moscow, ID</p>
+                    <h2>RSVP with us by June 6, 2015</h2>
                     <div id="error">
                         <!-- Filled with js -->
                     </div>
@@ -381,6 +380,10 @@
                         <li class="list-shadow"></li>
                     </ol>
                     <br />
+                    <a href="/rsvp/">
+                        RSVP &rtrif;
+                    </a>
+                    <br />
                     <a href="/rsvp/#registry">
                         View Gift Registry &rtrif;
                     </a>
@@ -409,6 +412,10 @@
                         </li>
                         <li class="list-shadow"></li>
                     </ol>
+                    <br />
+                    <a href="/rsvp/">
+                        RSVP &rtrif;
+                    </a>
                     <br />
                     <a href="/rsvp/#accomodation">
                         View Accomodations &rtrif;
