--- a/slideshow.html
+++ b/slideshow.html
@@ -156,6 +156,15 @@
                 <li><a href="/rsvp/#accomodation">Airport and Accomodations &rtrif;</a></li>
                 <li><a href="/rsvp/#registry">Registry &rtrif;</a></li>
             </ul>
+            <br />
+            <br />
+            <br />
+            <small>
+                Photos by
+                <a target="_blank" href="http://anniepliegophotography.com">
+                    Annie Pliego Photography
+                </a>
+            </small>
         </div>
     </div>
     <script type="text/javascript" src="/jquery/dist/jquery.min.js"></script>
