--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                     <input type="checkbox" id="guest_coming" checked="checked"></input>
 
                     <div class="label-shadow guest-number"></div>
-                    <label for="guest_number" class='guest-number'>Guests: </label>
+                    <label for="guest_number" class='guest-number'>Guests:<br/>(including you)</label>
                     <select id="guest_number" class="guest-number">
                         <option value="0">0</option>
                         <option value="1">1</option>
